...
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">

        <com.google.android.material.search.SearchBar
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            app:strokeColor="@color/neon"
            android:background="@color/blue"
            app:layout_scrollFlags="scroll|enterAlways"/>
...
        app:strokeColor="@color/neon"
        app:strokeWidth="2dp"
        app:background="@color/blue"
        app:layout_anchor="@id/searchBar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/item" />

...
